# search-customizations

./: .gitignore  README.md  config.yaml  pyproject.toml
app/: config.py  main.py
app/models/: __init__.py  search.py
app/routers/: search.py
app/services/: search_service.py
app/utils/: helpers.py
azure-functions/: __init__.py  function.yaml  search_function.py
scripts/: create_and_upload_index.py  create_index.py  populate_index.py
tests/: test_main.py  test_search.py
