[project]
name = "search-customizations"
version = "0.1.0"
description = "Customizing the Azure Search AI using Azure Functions"
authors = [
    {name = "Okwudili Ezeme"}
]
license = {text = "BSD 3-Clause"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
